# tracepix

./: .gitignore  Cargo.toml  README.md
benches/: diff.rs
crates/tracepix/: Cargo.toml
crates/tracepix-cli/: Cargo.toml
crates/tracepix/benches/: diff.rs
crates/tracepix/src/: compare.rs  image_io.rs
src/: antialiasing.rs  cli_arguments.rs  color.rs  compare.rs  image_io.rs  lib.rs  main.rs
