[package]
name = "tracepix"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }
rayon = "1.12.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "diff"
harness = false
