[package]
name = "tracepix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }
rayon = "1.12.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "diff"
harness = false
